fixed a bug where buttons were overlapping

--- a/aa19-python-group-project/react-vite/src/components/LandingPage/LandingPage.css
+++ b/aa19-python-group-project/react-vite/src/components/LandingPage/LandingPage.css
@@ -41,14 +41,14 @@
 
 .main-buttons {
   position: absolute;
-  top: 55%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   gap: 16px;
-  z-index: 0;
   width: 80%;
   justify-content: center;
+  padding: 25px;
 }
 
 .action-button {
@@ -77,22 +77,26 @@
 
 .login-section {
   position: absolute;
-  bottom: 50px;
+  bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .login-section p {
   color: white;
   font-size: 30px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+  margin-top: 5%;
 }
 
 .login {
   background-color: #9C27B0;
   color: white;
-  margin-bottom: 75%;
+  margin-bottom: 15%;
 }
 
 .feature-image-container {
@@ -125,4 +129,19 @@
 
 .feature-image.next.fade-in {
   opacity: 1;
+}
+
+@media screen and (max-height: 700px) {
+  .main-buttons {
+    top: 50%;
+  }
+  
+  .login-section {
+    bottom: 2%; 
+  }
+  
+  .action-button {
+    padding: 20px 40px; 
+    font-size: 20px; 
+  }
 }
